# CPP-Project-Setup

./: .gitignore  CMakeLists.txt  README.md
doc/: doxygen-config
script/: all_tests.sh  build.sh  install-hooks.sh  install_hooks.sh  pre-commit.sh  pre_commit.sh
src/: Controller.hh
test/: ControllerTest.cc
